<resources>
    <string name="app_name">Sub Marine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sub Marine</string>
    <string name="nav_header_subtitle">github.com/simondankelmann</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_scanbt">Scan Bluetooth</string>
    <string name="menu_connected_device">Connected Device</string>
    <string name="menu_periscope">Periscope</string>
    <string name="menu_signalDatabase">Signal Database</string>
    <string name="menu_signalDetail">Signal Detail</string>
    <string name="menu_recordSignal">Record Signal</string>
    <string name="menu_importSignal">Import Signal</string>
    <string name="menu_adapterSetup">Adapter Setup</string>
    <string name="menu_signalMap">Signal Map</string>
    <string name="menu_detectSignal">Detect Signal</string>
    <string name="menu_signalGenerator">Signal Generator</string>

    <string-array name="Modulations">
        <item>2-FSK</item>
        <item>GFSK</item>
        <item>ASK/OOK</item>
        <item>4-FSK</item>
        <item>MSK</item>
    </string-array>

    <string-array name="PktFormats">
        <item>-</item>
        <item>Synchronous</item>
        <item>Random</item>
        <item>Asynchronous</item>
    </string-array>
</resources>