<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.simon.dankelmann.submarine.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_scanbt"
            app:destination="@id/nav_scanbt" />
    </fragment>

    <fragment
        android:id="@+id/nav_scanbt"
        android:name="de.simon.dankelmann.submarine.ui.scanBt.ScanBtFragment"
        android:label="@string/menu_scanbt"
        tools:layout="@layout/fragment_scanbt" >
        <action
            android:id="@+id/action_nav_scanbt_to_nav_connected_device"
            app:destination="@id/nav_connected_device" />
    </fragment>

    <fragment
        android:id="@+id/nav_connected_device"
        android:name="de.simon.dankelmann.submarine.ui.connectedDevice.ConnectedDeviceFragment"
        android:label="@string/menu_connected_device"
        tools:layout="@layout/fragment_connected_device" >
        <action
            android:id="@+id/action_nav_connected_device_to_nav_periscope"
            app:destination="@id/nav_periscope" />
        <action
            android:id="@+id/action_nav_connected_device_to_nav_signal_database"
            app:destination="@id/nav_signal_database" />
        <action
            android:id="@+id/action_nav_connected_device_to_nav_record_signal"
            app:destination="@id/nav_record_signal" />
        <action
            android:id="@+id/action_nav_connected_device_to_nav_adapter_setup"
            app:destination="@id/nav_adapter_setup" />
    </fragment>

    <fragment
        android:id="@+id/nav_periscope"
        android:name="de.simon.dankelmann.submarine.ui.periscope.PeriscopeFragment"
        android:label="@string/menu_periscope"
        tools:layout="@layout/fragment_periscope" >
    </fragment>

    <fragment
        android:id="@+id/nav_signal_database"
        android:name="de.simon.dankelmann.submarine.ui.SignalDatabase.SignalDatabaseFragment"
        android:label="@string/menu_signalDatabase"
        tools:layout="@layout/fragment_signal_database" >
        <action
            android:id="@+id/action_nav_signal_database_to_nav_signalDetail"
            app:destination="@id/nav_signalDetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_signalDetail"
        android:name="de.simon.dankelmann.submarine.ui.viewSignalEntity.ViewSignalEntityFragment"
        android:label="@string/menu_signalDetail"
        tools:layout="@layout/fragment_view_signal_entity" >
    </fragment>

    <fragment
        android:id="@+id/nav_record_signal"
        android:name="de.simon.dankelmann.submarine.ui.recordSignal.RecordSignalFragment"
        android:label="@string/menu_recordSignal"
        tools:layout="@layout/fragment_record_signal" >
    </fragment>

    <fragment
        android:id="@+id/nav_adapter_setup"
        android:name="de.simon.dankelmann.submarine.ui.AdapterSetup.AdapterSetupFragment"
        android:label="@string/menu_adapterSetup"
        tools:layout="@layout/fragment_adapter_setup" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="de.simon.dankelmann.submarine.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="de.simon.dankelmann.submarine.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>